# adventofcode

./: .gitignore  README.md
aleksaw/: environment.yml
andehen/: shell.nix
archive/2022/nnerik/ocaml/: dune-project
archive/2022/nnerik/ocaml/lib/: day01.ml  day02.ml  dummy_solver.ml
claes/: .gitignore  1a.pp  2a.pp  AOCUtils.tpu
cpnat/: day01Calories.go
erik/: README.md
gkwaerp/: .gitignore
jakobgm/: 01.py  02.py  03.py  04.py  05.py  Cargo.toml  day02.py  day03.py  day04.py  day05.py  day07.py  day08.py  day09.py  day1.py  day10.py  day11.py  day12.py  day13.py  day2.py  day7.py  main.py
jodal/: .gitignore  README.md  day01.py  day02.py  day04.py  day05.py  day06.py  day07.py  day08.py  day09.py  day11.py  day12.py  input09.txt  pyproject.toml
jodal/aoc-rs/: Cargo.toml
jodal/aoc-rs/src/: day01.rs  day01a.rs  day01b.rs  day02.rs  day02a.rs  day02b.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  lib.rs  main.rs
johanbog/: duckdb03.py  sql02.sql  sql03.sql  sql03_1.sql  utils.py
kiloreven/: 01.py  02.py  03_input.txt  04.py
matsemann/: Day00.kt  Day01.kt  Day02.kt  Day03.kt  Day04.kt  Day05.kt  Day06.kt  Day07.kt  Day08.kt  Day09.kt  Day10.kt  Day11.kt  Day12.kt  Day13.kt  Day14.kt  Day15.kt  Day16.kt  Day17.kt  Day18.kt  Day19.kt  Day20.kt  Day21.kt  Day22.kt  Day23.kt  README.md  util.kt
msaecker/: Cargo.toml
myrlund/: bootstrap_day.sh  day15.py
nnerik/: 01.py  02.py  03.py  04.py  05.py  06.py  07.py  advent_2023.opam  day0.py  day01.py  day02.py  pyproject.toml
nnerik/01/: aoc01.py
nnerik/02/: aoc02.py
nnerik/03/: aoc03.py
nnerik/04/: aoc04.py
nnerik/05/: aoc05.py
nnerik/06/: aoc06.py
nnerik/07/: aoc07.py
nnerik/08/: golf.py  golf08.py  solve.py
nnerik/09/: aoc09.py  solve.py
nnerik/10/: aoc10.py
nnerik/11/: aoc11.py
nnerik/12/: aoc12.py
nnerik/13/: aoc13.py
nnerik/15/: aoc15.py
nnerik/17/: aoc17.py
nnerik/19/: aoc19.py
nnerik/inputs/: 0.txt  input02.txt
nnerik/lib/: day01.ml  day03.ml  day05.ml  dummy_solver.mli  dune
nnerik/src/: advent.py  solve01.py  solve03.py  solve04.py  solve08.py  solve09.py  solve11.py  solve12.py  solve13.py
nnerik/test/: dune  test_day_01.ml  test_day_02.ml  test_day_03.ml  test_day_04.ml  test_day_06.ml  test_day_07.ml
nnerik/tests/: conftest.py  test_01.py  test_02.py  test_03.py  test_05.py  test_08.py  test_10.py  test_11.py  test_13.py  test_14.py
nnerik/tests/01/: test_solver.py
nnerik/unique/: input04.txt
orhan/: day1.exs  (+3 more)
steinarvk/: Cargo.toml
steinarvk/src/dec10/: main.rs
steinarvk/src/dec11/: main.rs
steinarvk/src/dec13/: main.rs
steinarvk/src/dec14/: main.rs
steinarvk/src/dec15/: main.rs
steinarvk/src/dec16/: main.rs
steinarvk/src/dec17/: main.rs
steinarvk/src/dec19/: main.rs
steinarvk/src/dec20/: main.rs
steinarvk/src/dec24/: main.rs
steinarvk/src/dec25/: main.rs
steinarvk/src/dec3/: main.rs
steinarvk/src/dec4/: main.rs
steinarvk/src/dec6/: main.rs
steinarvk/src/dec7/: main.rs
steinarvk/src/dec9/: main.rs
(+1379 files in other folders)
