[tool.poetry]
name = "aoc"
version = "0.1.0"
description = ""
authors = ["Stein Magnus Jodal <stein.magnus.jodal@oda.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
mypy = "^0.991"
pytest = "^7.2.0"
flake8 = "^6.0.0"
flake8-bugbear = "^22.12.6"
flake8-black = "^0.3.5"
flake8-isort = "^5.0.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
