[package]
name = "advent-of-code-2022"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
itertools = "0.10.5"
regex = "1.7.0"

[[bin]]
name = "dec1"
path = "src/dec1/main.rs"

[[bin]]
name = "dec2"
path = "src/dec2/main.rs"

[[bin]]
name = "dec3"
path = "src/dec3/main.rs"

[[bin]]
name = "dec4"
path = "src/dec4/main.rs"

[[bin]]
name = "dec5"
path = "src/dec5/main.rs"

[[bin]]
name = "dec6"
path = "src/dec6/main.rs"

[[bin]]
name = "dec7"
path = "src/dec7/main.rs"

[[bin]]
name = "dec8"
path = "src/dec8/main.rs"

[[bin]]
name = "dec9"
path = "src/dec9/main.rs"

[[bin]]
name = "dec10"
path = "src/dec10/main.rs"

[[bin]]
name = "dec11"
path = "src/dec11/main.rs"

[[bin]]
name = "dec12"
path = "src/dec12/main.rs"
