[package]
name = "aoc"
version = "0.1.0"
authors = ["Stein Magnus Jodal"]
edition = "2018"

[dependencies]
daggy = "0.7.0"
lazy_static = "1.4.0"
itertools = "0.9.0"
regex = "1"
serde = { version = "1.0", features = ["derive"] }
structopt = "0.3"
validator = { version = "0.12", features = ["derive"] }
